@@ -10,6 +10,7 @@ DBD::SQLite = 0
 DBIx::Class = 0.08108
 HTML::FormFu = 2.00
 List::MoreUtils = 0
+MooseX::Attribute::Chained = 1.0.2
 Storable = 0
 Task::Weaken = 0 ; make sure Scalar::Util has weaken()
 
