@@ -2,6 +2,9 @@
 
     - New 'expand_stash_dots' config option
 
+    - remove bundled/renamed MooseX::Attribute::Chained and depend on the
+      fixed version
+
 2.02 2016-06-24
 
     - documentation fixes
